<resources>
    <!-- Long strings -->
    <string name="activity_one_info">The Breathe activity allows you to watch calming videos (such as trees in the wind) with relaxing background noises (such as water flowing) in a random order.</string>
    <string name="activity_two_info">The Fidget Cube activity allows you to play with a virtual fidget cube that has a switch, buttons, and a joystick accompanied by vibrations and clicking sounds.</string>
    <string name="activity_three_info">The Bubbles activity allows you to pop colorful bubbles which slowly appear and move across the screen.</string>
    <string name="activity_four_info">The Stories activity allows you to listen to popular children\'s stories (such as Goldilocks and the Three Bears) read soothingly with appropriate background imagery.</string>
    <string name="activity_five_info">The Animals activity allows you to virtually pet animals (such as horses) who will respond with their respective animal call.</string>
    <string name="activity_six_info">The Music activity allows you to select and listen to relaxing sounds on a loop.</string>
    <string name="tutorial1">Welcome to the activity_name tutorial! This tutorial will guide you through how to use activity_name.\
        \nAt any time, you can click the \"Done\" button at the bottom to exit the tutorial and start the activity.\
        \nThis tutorial will not show up again unless you re-enable it in the settings page.\
        \nSwipe to the next page when you\'re ready.
    </string>
    <string name="fidgetcube_tutorial2">Click on the buttons and enjoy the sound (and, if enabled, vibration).</string>
    <string name="fidgetcube_tutorial3">Navigate to another face of the cube by swiping or using the navigation buttons.</string>
    <string name="fidgetcube_tutorial4">Click on the switch to see the animation, hear the sound (and, if enabled, vibration).</string>
    <string name="fidgetcube_tutorial5">Drag your finger around to move the joystick.</string>

    <string name="tutorial_to_history">After you have left the activity, you can go to the History page to rate your satisfaction.</string>

    <string name="sounds_tutorial2">Click on a button to hear the sound, and click again to turn it off.</string>
    <string name="sounds_tutorial3">You can play multiple sounds at the same time.</string>
    <string name="sounds_tutorial4">Use the tabs at the bottom to navigate to different categories of sounds.</string>
    <string name="sounds_tutorial5">Sounds play on a loop. They continue playing when you move to another tab, but stop playing when you leave the activity.</string>

    <string name="history_tutorial1">
        History contains records of your use of each activity. The records are listed from most recent to least recent.
    </string>
    <string name="history_tutorial2">Click on a smiley face to record your satisfaction.</string>
    <string name="history_tutorial3">You can change your satisfaction at any time by clicking on another smiley face. You can\'t unselect your rating, you can only select a new rating.</string>

    <!-- Short strings -->
    <string name="app_name">Sensapp</string>
    <string name="activity_one_title">Breathe</string>
    <string name="activity_two_title">Fidget Cube</string>
    <string name="activity_three_title">Bubbles</string>
    <string name="activity_four_title">Stories</string>
    <string name="activity_five_title">Animals</string>
    <string name="activity_six_title">Sounds</string>
    <string name="activity_button_description">Button leading to an activity</string>
    <string name="favorite_button_description">Button to favorite an activity</string>
    <string name="info_button_description">Button leading to the info page of activity</string>
    <string name="favorites">Favorites</string>
    <string name="activities">Activities</string>
    <string name="history">History</string>
    <string name="information">Information</string>
    <string name="activity_fidget_description">Fidget cube (buttons, switches, etc.)</string>
    <string name="duration_label">Duration: </string>
    <string name="time_activity_one">5mins</string>
    <string name="animal_sounds_label">Animal</string>
    <string name="nature_sounds_label">Nature</string>
    <string name="water_sounds_label">Water</string>
    <string name="info_error">Error: Activity to display text for unknown!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="left_button_description">Button leading to the left on fidget cube</string>
    <string name="right_button_description">Button leading to the right on fidget cube</string>
    <string name="switch_description">Switch to flip on and off</string>
    <string name="no_favorite">No favorites found</string>
    <string name="purr">Purr</string>
    <string name="leaves">Leaves</string>
    <string name="forest">Forest</string>
    <string name="rain">Rain</string>
    <string name="river">River</string>
    <string name="birds">Birds</string>
    <string name="done">Done</string>
</resources>
