<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TableLayout
        android:id="@+id/activity_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/row_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/activity_one"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_one_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_button_description"
                    android:onClick="launchBreatheActivity"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/breathe" />

                <TextView
                    android:id="@+id/activity_one_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_one_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_two"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_two_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_fidget_description"
                    android:onClick="launchFidgetCubeActivity"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/fidget_cube" />

                <TextView
                    android:id="@+id/activity_two_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_two_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/row_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/activity_three"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_three_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_button_description"
                    android:onClick="launchBubblesActivity"
                    app:srcCompat="@color/colorPrimary" />

                <TextView
                    android:id="@+id/activity_three_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_three_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_four"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_four_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_button_description"
                    android:onClick="launchStoriesActivity"
                    app:srcCompat="@color/colorAccent" />

                <TextView
                    android:id="@+id/activity_four_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_four_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/row_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/activity_five"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_five_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_button_description"
                    android:onClick="launchAnimalsActivity"
                    app:srcCompat="@android:color/holo_orange_dark" />

                <TextView
                    android:id="@+id/activity_five_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_five_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_six"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/activity_six_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_button_description"
                    android:onClick="launchMusicActivity"
                    app:srcCompat="@android:color/holo_blue_bright" />

                <TextView
                    android:id="@+id/activity_six_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/activity_six_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</FrameLayout>