<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HistoryFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="362dp"
        android:layout_height="99dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/history_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/activity_one_title"
                android:src="@drawable/breathe" />


            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                app:showLine="true" />

            <TextView
                android:id="@+id/history_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-343dp"
                android:layout_marginLeft="-343dp"
                android:layout_marginTop="70dp"
                android:text="@string/activity_one_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="65dp"
                android:text="@string/duration_label"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_duration_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="65dp"
                android:text="@string/time_activity_one"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

